2008-09-28  Romain Francoise  <romain@orebokech.com>

	* startup.el (command-line): Start the daemon server later.

2008-09-28  Martin Rudalics  <rudalics@gmx.at>

	* subr.el (read-quoted-char): Call char-resolve-modifiers
	instead of char-resolve-modifers.

2008-09-27  Glenn Morris  <rgm@gnu.org>

	* play/solitaire.el (solitaire-mode-map): Bind "\r" rather
	than [return].  (Bug#1031)

2008-09-27  Peter Dyballa  <Peter_Dyballa@Freenet.DE>

	* calendar/calendar.el (solar-sunrises-buffer): Fix typo.

2008-09-27  Daiki Ueno  <ueno@unixuser.org>

	* epg.el (epg-wait-for-status): Check if there is no pending
	status.
	Reported by Ted Romer <ted@romerfamily.com>.

2008-09-26  Dan Nicolaescu  <dann@ics.uci.edu>

	* startup.el (command-line): Turn on menu-bar-mode and
	tool-bar-mode when running as a daemon.

2008-09-26  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in ($(lisp)/progmodes/cc-mode.elc): Remove.
	($(lisp)/progmodes/cc-align.elc, $(lisp)/progmodes/cc-cmds.elc)
	($(lisp)/progmodes/cc-compat.elc, $(lisp)/progmodes/cc-defs.elc)
	($(lisp)/progmodes/cc-engine.elc)
	($(lisp)/progmodes/cc-fonts.elc, $(lisp)/progmodes/cc-langs.elc)
	($(lisp)/progmodes/cc-mode.elc, $(lisp)/progmodes/cc-styles.elc)
	($(lisp)/progmodes/cc-subword.elc)
	($(lisp)/progmodes/cc-vars.elc): New dependencies.

	* Makefile.in ($(lisp)/progmodes/cc-mode.elc): Remove.
	($(lisp)/progmodes/cc-align.elc, $(lisp)/progmodes/cc-cmds.elc)
	($(lisp)/progmodes/cc-compat.elc, $(lisp)/progmodes/cc-defs.elc)
	($(lisp)/progmodes/cc-engine.elc)
	($(lisp)/progmodes/cc-fonts.elc, $(lisp)/progmodes/cc-langs.elc)
	($(lisp)/progmodes/cc-mode.elc, $(lisp)/progmodes/cc-styles.elc)
	($(lisp)/progmodes/cc-subword.elc)
	($(lisp)/progmodes/cc-vars.elc): New dependencies.

2008-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* informat.el (Info-split-threshold): New variable.
	(Info-split): Use it.

	* textmodes/texinfmt.el (texinfo-format-buffer):
	Use Info-split-threshold to decide whether to split Info files.
